# phantom-secrets

./: .cursorrules  .gitignore  .pre-commit-hooks.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  SECURITY.md  codex.md
.github/: FUNDING.yml  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/web/: .env.local.example  MEDIA_ASSETS.md  package-lock.json  package.json
apps/web/public/: install.ps1  install.sh  llms-full.txt  llms.txt
apps/web/public/.well-known/: ai-plugin.json  security.txt
apps/web/src/app/: globals.css  layout.tsx  manifest.ts  page.tsx  providers.tsx  robots.ts  sitemap.ts
apps/web/src/app/api/v1/auth/device/approve/: route.ts
apps/web/src/app/api/v1/auth/device/initiate/: route.ts
apps/web/src/app/api/v1/auth/device/poll/: route.ts
apps/web/src/app/api/v1/billing/checkout/: route.ts
apps/web/src/app/api/v1/billing/portal/: route.ts
apps/web/src/app/api/v1/billing/webhook/: route.ts
apps/web/src/app/api/v1/integrations/vercel/callback/: route.ts
apps/web/src/app/api/v1/integrations/vercel/install/: route.ts
apps/web/src/app/api/v1/me/: route.ts
apps/web/src/app/api/v1/teams/: route.ts
apps/web/src/app/api/v1/teams/[team_id]/key/: route.ts
apps/web/src/app/api/v1/teams/[team_id]/members/: route.ts
apps/web/src/app/api/v1/teams/[team_id]/vaults/[project_id]/: route.ts
apps/web/src/app/api/v1/vault/pull/: route.ts
apps/web/src/app/api/v1/vault/push/: route.ts
apps/web/src/app/dashboard/: layout.tsx  page.tsx
apps/web/src/app/dashboard/billing/: page.tsx
apps/web/src/app/dashboard/projects/[id]/: page.tsx
apps/web/src/app/dashboard/team/: page.tsx
apps/web/src/app/device/: page.tsx
apps/web/src/app/integrations/vercel/success/: page.tsx
apps/web/src/app/pricing/: page.tsx
apps/web/src/components/landing/: BrandLogos.tsx  CTA.tsx  Comparison.tsx  CopyButton.tsx  FAQ.tsx  FeatureGrid.tsx  Features.tsx  Hero.tsx  Hero3D.tsx  Hero3DScene.tsx  HowItWorks.tsx  Icons.tsx  Install.tsx  Nav.tsx  Pricing.tsx  ProblemBand.tsx  QuickStart.tsx  Reveal.tsx  SiteFooter.tsx  SocialProof.tsx  SupportedTools.tsx  TerminalDemo.tsx  TheSwap.tsx  Transformation.tsx  Trust.tsx  UseCases.tsx  motion.ts
apps/web/src/lib/: auth.ts  posthog.ts  stripe.ts  supabase-browser.ts  supabase-server.ts  use-supabase-query.ts
apps/web/supabase/: .gitignore
apps/web/supabase/migrations/: 001_initial.sql  002_teams.sql  003_stripe_events.sql  004_platform_tokens.sql  005_team_keys.sql
crates/phantom-cli/: Cargo.toml
crates/phantom-cli/src/: main.rs
crates/phantom-cli/src/commands/: add.rs  check.rs  cloud.rs  completion.rs  copy.rs  doctor.rs  env.rs  exec.rs  export_cmd.rs  import_cmd.rs  init.rs  list.rs  login.rs  logout.rs  mod.rs  open.rs  pull.rs  remove.rs  reveal.rs  rotate.rs  setup.rs  start.rs  status.rs  stop.rs  sync.rs  team.rs  unwrap.rs  upgrade.rs  watch.rs  why.rs  wrap.rs
crates/phantom-cli/src/commands/init/: config.rs  docs.rs  env.rs  hooks.rs  mod.rs  prompts.rs  vault.rs
crates/phantom-cli/tests/: add_remove_test.rs  add_stdin_test.rs  check_test.rs  cloud_test.rs  init_test.rs  list_json_test.rs
crates/phantom-core/: Cargo.toml
crates/phantom-core/src/: auth.rs  cloud.rs  config.rs  dotenv.rs  error.rs  fs.rs  lib.rs  sync.rs  team_crypto.rs  teams.rs  teams_vault.rs  token.rs
crates/phantom-mcp/: Cargo.toml
crates/phantom-mcp/src/: main.rs  server.rs
crates/phantom-mcp/src/tools/: helpers.rs  mod.rs  params.rs  pkg_json.rs
crates/phantom-proxy/: Cargo.toml
crates/phantom-proxy/src/: body_scope.rs  interceptor.rs  lib.rs  server.rs  services.rs  test_server.rs
crates/phantom-vault/: Cargo.toml
crates/phantom-vault/src/: crypto.rs  file.rs  keychain.rs  lib.rs  traits.rs
docs/: CNAME  blog-devto.md  blog-launch.md  ci-cd.md  claude-code.md  cursor-phantom-tutorial.md  getting-started.md  hn-submission.md  index.html  llms-full.txt  llms.txt  og-render.html  pricing.html  robots.txt  shell-prompt.md  sitemap.xml  troubleshooting.md  waitlist.html
integrations/github-actions/: README.md  action.yml  example-workflow.yml
integrations/homebrew/: README.md
integrations/homebrew/Formula/: phantom.rb
integrations/railway/: README.md
integrations/vercel/: README.md  vercel-integration.json
mcp-registry/: README.md  server.json
npm/: README.md  install.js  package.json
npm-mcp/: README.md  install.js  package.json
scripts/: install.ps1  publish-crates.sh
src/checks/: env_gitignore.py
video/: capture-phantom.mjs  package-lock.json  package.json
video/src/: PhantomDemo.jsx  Root.jsx
