[package]
name = "phantom-secrets"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "Open-source CLI that prevents AI coding agents from leaking your API keys"
keywords = ["secrets", "api-keys", "ai-safety", "claude-code", "mcp"]
categories = ["command-line-utilities", "development-tools", "cryptography"]

[[bin]]
name = "phantom"
path = "src/main.rs"

[dependencies]
phantom-core = { workspace = true }
phantom-vault = { workspace = true }
phantom-proxy = { workspace = true }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
colored = "2"
serde_json = { workspace = true }
zeroize = { workspace = true }
open = "5"
which = "6"
dirs = "5"
arboard = { version = "3", default-features = false }
indicatif = "0.17"
base64 = { workspace = true }
notify = "7"
chacha20poly1305 = "0.10"
rand = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
wiremock = "0.6"
