[package]
name = "phantom-secrets"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "Open-source CLI that prevents AI coding agents from leaking your API keys"
keywords = ["secrets", "api-keys", "ai-safety", "claude-code", "mcp"]
categories = ["command-line-utilities", "development-tools", "cryptography"]

[[bin]]
name = "phantom"
path = "src/main.rs"

[dependencies]
phantom-core = { workspace = true }
phantom-vault = { workspace = true }
phantom-proxy = { workspace = true }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
colored = "2"
serde = { workspace = true }
serde_json = { workspace = true }
zeroize = { workspace = true }
open = "5"
which = "6"
dirs = "5"
arboard = { version = "3", default-features = false }
indicatif = "0.17"
base64 = { workspace = true }
notify = "7"
rpassword = "7"
libc = "0.2"
self_update = { version = "0.42", default-features = false, features = ["rustls", "compression-flate2", "compression-zip-deflate", "archive-tar", "archive-zip"] }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
wiremock = "0.6"
