[package]
name = "phantom-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for Phantom Secrets — config, .env parsing, token generation"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }

[dev-dependencies]
tempfile = "3"
