[package]
name = "phantom-secrets-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "Core library for Phantom Secrets — config, .env parsing, token generation"
keywords = ["secrets", "env", "dotenv", "config", "ai-safety"]
categories = ["development-tools", "config", "parser-implementations"]

[lib]
name = "phantom_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
base64 = { workspace = true }
keyring = { version = "3", features = ["apple-native", "linux-native", "windows-native"] }
tokio = { workspace = true }
tempfile = "3"
