[package]
name = "phantom-secrets-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "MCP server for Phantom Secrets — lets AI tools manage secrets safely"
keywords = ["mcp", "mcp-server", "secrets", "ai-safety", "claude"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "phantom-mcp"
path = "src/main.rs"

[dependencies]
phantom-core = { workspace = true }
phantom-vault = { workspace = true }
rmcp = { version = "1", features = ["server", "transport-io"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = "1"
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
colored = "2"
base64 = { workspace = true }
zeroize = { workspace = true }
chacha20poly1305 = "0.10"
rand = { workspace = true }

[dev-dependencies]
tempfile = "3"
