[package]
name = "phantom-secrets-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "HTTP proxy for Phantom Secrets — intercepts requests and injects real credentials"
keywords = ["proxy", "secrets", "api-keys", "ai-safety", "mcp"]
categories = ["network-programming", "web-programming", "development-tools"]

[lib]
name = "phantom_proxy"
path = "src/lib.rs"

[dependencies]
phantom-core = { workspace = true }
tokio = { workspace = true }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
tracing = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["rustls-tls", "stream"], default-features = false }
tokio-stream = "0.1"
rand = { workspace = true }
hex = { workspace = true }
subtle = "2.6"

[dev-dependencies]
tokio = { workspace = true }
