[package]
name = "phantom-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Secret vault backends for Phantom Secrets — OS keychain and encrypted file"

[dependencies]
phantom-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
keyring = { version = "3", features = ["apple-native", "linux-native", "windows-native"] }
directories = "5"
dirs = "5"
rand = { workspace = true }
hex = { workspace = true }

# Encryption for file vault
chacha20poly1305 = "0.10"
argon2 = "0.5"

[dev-dependencies]
tempfile = "3"
