[package]
name = "phantom-secrets-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "Secret vault backends for Phantom Secrets — OS keychain and encrypted file"
keywords = ["secrets", "vault", "keychain", "encryption", "ai-safety"]
categories = ["cryptography", "development-tools", "authentication"]

[lib]
name = "phantom_vault"
path = "src/lib.rs"

[dependencies]
phantom-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
keyring = { version = "3", features = ["apple-native", "linux-native", "windows-native"] }
directories = "5"
dirs = "5"
rand = { workspace = true }
hex = { workspace = true }

# Encryption for file vault
chacha20poly1305 = "0.10"
argon2 = "0.5"

# Advisory file locking (cross-platform)
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
